--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -30,6 +30,9 @@
         <ion-item menu-close href="#/app/playlists">
           Playlists
         </ion-item>
+        <ion-item menu-close href="#/app/favourites">
+          <i class="icon icon ion-star"></i> Favourites
+        </ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menu>
