Add Leaflet Map.

--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -1,7 +1,6 @@
 <ion-view view-title="Map">
   <ion-content>
     <h1>Map</h1>
-    <!--<leaflet id='map'  height="300px" width="100%" ng-if="onTabTwo"></leaflet>-->
-    <!--<div id="cartodbMap"></div>-->
+    <div id="cartodbMap"></div>
   </ion-content>
 </ion-view>
