--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -30,8 +30,11 @@
         <ion-item menu-close href="#/app/playlists">
           Playlists
         </ion-item>
-		<ion-item menu-close href="#/app/settings">
+				<ion-item menu-close href="#/app/settings">
           Settings
+        </ion-item>
+				<ion-item menu-close href="#/app/contact">
+          Contact Us
         </ion-item>
       </ion-list>
     </ion-content>
