--- a/www/templates/favourite.html
+++ b/www/templates/favourite.html
@@ -1,5 +1,5 @@
-<ion-view view-title="Fav">
-    <ion-content>
-        {{}}
-    </ion-content>
+<ion-view> view-title="Fav"
+  <ion-content>
+    {{}}
+  </ion-content>
 </ion-view>
