--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -36,6 +36,9 @@
         <ion-item menu-close href="#/app/favourites">
           <i class="icon icon ion-star"></i> Favourites
         </ion-item>
+        <ion-item menu-close href="#/app/explore">
+          Explore
+        </ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menu>
