making photos not transparent

--- a/www/templates/photo.html
+++ b/www/templates/photo.html
@@ -1,4 +1,4 @@
-<div class="modal image-modal transparent" ng-click="closeModal()">
+<div class="modal image-modal" ng-click="closeModal()">
   <ion-slide-box on-slide-changed="slideChanged(index)" show-pager="true" active-slide="activeSlide">
     <ion-slide ng-repeat="photo in gallery">
       <img ng-src="{{photo.src}}" class="fullscreen-image"/>
