Contact page fully integrated into settings page. Added save button on settings page. Still waiting on saving to file.

--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -1,4 +1,10 @@
 <ion-view view-title=''>
+	<ion-nav-buttons side="secondary">
+      <button class="button" ng-click="serialize()">
+        Save
+      </button>
+  </ion-nav-buttons>
+
   <ion-content>
 	<div style = 
 		"background-color: #90C3D4; 
