--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -22,7 +22,7 @@
 	<ion-list-header style = "font-size: 120%">
 		Location Settings
 	</ion-list-header>
-	<ion-toggle ng-model="prefs.uselocation"> 
+	<ion-toggle ng-model="prefs.uselocation" ng-click="enableloc()"> 
 		Use Location
 	</ion-toggle>
 	<br>
@@ -30,9 +30,11 @@
 	<ion-list-header style = "font-size: 120%">
 		Notifications
 	</ion-list-header>
-	<ion-toggle ng-model = "prefs.notifications.news" > 
-		News
-	</ion-toggle>
+	<ion-item class="item-borderless" ng-repeat="notification in prefs.notifications">
+		<ion-toggle class="item-borderless" ng-model = "notification.value" > 
+			{{notification.title}}
+		</ion-toggle>
+	</ion-item>
 	<br>
 	
 	<ion-item href="#/app/history" style = "text-align: center">
