--- a/www/templates/Explore.html
+++ b/www/templates/Explore.html
@@ -1,27 +1,20 @@
-<ion-view view-title="Explore">
-  <ion-content>
+<ion-view view-title='Explore'>
+  <ion-nav-buttons side="right">
+    <div ng-controller="ItemCtrl as itemCtrl">
+      <button class="button button-icon ion-search" ng-click="itemCtrl.showFilterBar()">
+      </button>
+    </div>
+  </ion-nav-buttons>
 
-    <!--
-    repeat trail data this way
-    <div ng-repeat="">
-    -->
-    <div class="card" ng-click=""> <!--click to trail page-->
-      <ion-item style="margin: 10px; margin-right: 2px;">
-        <h1>trail name</h1>
-        <p> <img src="img/ionic.png" class="imgStretch"/> </p>
-        <p> difficulty color <i class="icon icon ion-star" ng-click=""></i> </p>
-      </ion-item>
+  <ion-content>
+    <div style="padding: 5px; border: solid black 2px">
+      <ti-segmented-control>
+        <ti-segmented-control-button class="button-positive" title="'Easy'"></ti-segmented-control-button>
+        <ti-segmented-control-button class="button-balanced" title="'Medium'"></ti-segmented-control-button>
+        <ti-segmented-control-button class="button-assertive" title="'Hard'"></ti-segmented-control-button>
+        <ti-segmented-control-button class="button-royal" title="'All'" selected></ti-segmented-control-button>
+      </ti-segmented-control>
     </div>
-    <div class="card" ng-click="">
-      <ion-item style="margin: 10px; margin-left: 2px;">
-        <h1>trail name</h1>
-        <p> <img src="img/ionic.png" class="imgStretch"/> </p>
-        <p> difficulty color <i class="icon icon ion-star" ng-click=""></i> </p>
-      </ion-item>
-    </div>
-    <!--
-    </div>
-    -->
 
   </ion-content>
 </ion-view>
