switched from sqlite to files. added plugin to enable device gps from in-app with a dialog window.

--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -22,9 +22,9 @@
 	<ion-list-header style = "font-size: 120%">
 		Location Settings
 	</ion-list-header>
-	<ion-toggle ng-model="prefs.uselocation" ng-click="enableloc()"> 
+	<ion-item ng-model="prefs.uselocation" ng-click="enablegps()"> 
 		Use Location
-	</ion-toggle>
+	</ion-item>
 	<br>
 	
 	<ion-list-header style = "font-size: 120%">
