--- a/www/templates/contactus.html
+++ b/www/templates/contactus.html
@@ -17,7 +17,7 @@
 		
 		<ion-item>
 			<ion-icon style = "display: table-cell; min-width: 40px">
-				<img src = "/img/phone_icon.png"
+				<img src = "img/phone_icon.png"
 					style = "width: 40px; height: 40px">
 			</ion-icon>
 		
@@ -33,7 +33,7 @@
 	
 		<ion-item>
 			<ion-icon style = "display: table-cell; min-width: 40px">
-				<img src = "/img/email_icon.jpg"
+				<img src = "img/email_icon.jpg"
 					style = "width: 40px; height: 40px">
 			</ion-icon>
 			<div style = "display: table-cell; width: 100%; text-align: center; vertical-align: top">
@@ -57,15 +57,15 @@
 		padding: 5px">
 		
 		<a href = "https://www.facebook.com/">
-			<img src = "./img/facebook_icon.png"
+			<img src = "img/facebook_icon.png"
 				style = "width: 40px; height: 40px">
 		</a>
 		<a href = "https://www.linkedin.com/uas/login">
-			<img src = "./img/linkedin_icon.png"
+			<img src = "img/linkedin_icon.png"
 				style = "width: 40px; height: 40px">
 		</a>
 		<a href = "https://github.com/artbabu/GetLost">
-			<img src = "./img/github_icon.png"
+			<img src = "img/github_icon.png"
 				style = "width: 40px; height: 40px">
 		</a>
 	</div>
