--- a/www/templates/explore.html
+++ b/www/templates/explore.html
@@ -1,16 +1,16 @@
 <ion-view view-title='Explore'>
   <ion-nav-buttons side="right">
-    <div ng-controller="ExplorePageSearchItemCtrl as itemCtrl">
-      <button class="button button-icon ion-search" ng-click="itemCtrl.showFilterBar()">
+    <div>
+      <button class="button button-icon ion-search" ng-click="showFilterBar()">
+        Search
       </button>
     </div>
   </ion-nav-buttons>
-
   <ion-content>
 
     <!-- Segment Buttons TODO-->
     <div style="padding: 5px">
-      <ti-segmented-control>
+      <ti-segmented-control on-select="buttonClicked($index)">
         <ti-segmented-control-button class="button-balanced" title="'Easy'"></ti-segmented-control-button>
         <ti-segmented-control-button class="button-positive" title="'Medium'"></ti-segmented-control-button>
         <ti-segmented-control-button class="button-dark" title="'Hard'"></ti-segmented-control-button>
@@ -18,15 +18,28 @@
       </ti-segmented-control>
     </div>
 
+    <md-content layout-padding>
+      <md-grid-list md-cols="2" md-row-height="1:1" md-gutter="4px" >
+        <md-grid-tile ng-repeat="data in datas" href="#/app/explore/{{data.iterID}}"
+                      style="border: 2px solid black; border: 2px solid {{data.difficulty}}; border-radius:5%">
+          <md-grid-tile-header class="main-card-title" style="background-color: {{data.difficulty}}">
+            <h3 class="main-card-title-text">
+              {{data.name}}, {{data.placeName}}
+            </h3>
+          </md-grid-tile-header>
+          <img src="../img/trail1.jpg" style="position: relative; width:100%; height:50%"/>
+          <md-grid-tile-footer class="main-card-footer" style="background-color: {{data.difficulty}}">
+            <button class="button button-energized button-icon ion-star" ng-click="">
+
+            </button>
+          </md-grid-tile-footer>
+        </md-grid-tile>
+      </md-grid-list>
+    </md-content>
+
     <ion-refresher>
-      <!--TODO
-      -->
+      <!--TODO-->
     </ion-refresher>
-    <ion-item ng-repeat="data in datas" href="#/app/explore/{{data.iterID}}">
-      <h2 style="font-size: 20px">
-        {{data.placeName}}, {{data.name}}, {{data.difficulty}}
-      </h2>
-    </ion-item>
 
   </ion-content>
 </ion-view>
