Fixed Segment buttons not displaying words

--- a/www/templates/explore.html
+++ b/www/templates/explore.html
@@ -11,10 +11,10 @@
     <!-- Segment Buttons TODO-->
     <div style="padding: 5px">
       <ti-segmented-control on-select="buttonClicked($index)">
-        <ti-segmented-control-button class="button-balanced" title="'Easy'"></ti-segmented-control-button>
-        <ti-segmented-control-button class="button-positive" title="'Medium'"></ti-segmented-control-button>
-        <ti-segmented-control-button class="button-dark" title="'Hard'"></ti-segmented-control-button>
-        <ti-segmented-control-button class="button-royal" title="'All'" selected></ti-segmented-control-button>
+        <ti-segmented-control-button class="button-balanced" title="'Easy'">Easy</ti-segmented-control-button>
+        <ti-segmented-control-button class="button-positive" title="'Medium'">Medium</ti-segmented-control-button>
+        <ti-segmented-control-button class="button-dark" title="'Hard'">Hard</ti-segmented-control-button>
+        <ti-segmented-control-button class="button-royal" title="'All'" selected>All</ti-segmented-control-button>
       </ti-segmented-control>
     </div>
 
