--- a/www/templates/explore.html
+++ b/www/templates/explore.html
@@ -29,17 +29,11 @@
           </md-grid-tile-header>
           <img src="../img/trail1.jpg" style="position: relative; width:100%; height:50%"/>
           <md-grid-tile-footer class="main-card-footer" style="background-color: {{data.difficulty}}">
-            <button class="button button-energized button-icon ion-star" ng-click="">
-
-            </button>
+            <button class="button button-energized button-icon ion-star" ng-click=""></button>
           </md-grid-tile-footer>
         </md-grid-tile>
       </md-grid-list>
     </md-content>
-
-    <ion-refresher>
-      <!--TODO-->
-    </ion-refresher>
 
   </ion-content>
 </ion-view>
