--- a/www/css/style.css
+++ b/www/css/style.css
@@ -19,3 +19,9 @@
   height:   100vh;
   width:    auto;
 }
+#cartodbMap {
+  height: 100%;
+  width: 100%;
+  background: black;
+  margin: 0 auto 0 auto;
+}
