--- a/www/templates/explore.html
+++ b/www/templates/explore.html
@@ -2,8 +2,8 @@
   <ion-content>
     <h1>Prince George Maps</h1>
     <ion-list>
-      <ion-item ng-repeat="map in maps" href="#/app/explore/map/{{map.id}}">
-        {{map.title}}
+      <ion-item ng-repeat="map in maps" href="#/app/map/{{map.properties.cartodb_id}}">
+        {{map.properties.name}}
       </ion-item>
     </ion-list>
   </ion-content>
