--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Map">
-  <ion-content data-tap-disabled="true">
+  <ion-content>
     <div id="cartodbMap"></div>
   </ion-content>
 </ion-view>
