Add button to map template.

--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -1,4 +1,7 @@
 <ion-view view-title="Map">
+  <ion-nav-buttons side="right">
+    <button ng-click="locate();" class="button button-icon icon ion-pinpoint"></button>
+  </ion-nav-buttons>
   <ion-content>
     <div id="cartodbMap"></div>
   </ion-content>
