--- a/www/css/style.css
+++ b/www/css/style.css
@@ -50,3 +50,10 @@
   border-bottom-left-radius: 5%;
   border-bottom-right-radius: 5%;
 }
+
+/* Segment Bar Styling */
+#segmentButton {
+  max-height: 30px;
+  height: 30px;
+  font-family: Verdana, sans-serif;
+}
