--- a/www/templates/nearby.html
+++ b/www/templates/nearby.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Nearest Trail">
+<ion-view view-title="Nearby">
   <ion-content>
     <ion-list>
       <ion-item ng-repeat="trail in trails">
