--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -42,6 +42,9 @@
         <ion-item menu-close href="#/app/explore">
           Explore
         </ion-item>
+        <ion-item menu-close href="#/app/nearby">
+          Nearby
+        </ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menu>
