--- a/www/templates/nearby.html
+++ b/www/templates/nearby.html
@@ -1,8 +1,8 @@
 <ion-view view-title="Nearby">
   <ion-content>
     <ion-list>
-      <ion-item ng-repeat="trail in trails">
-        {{trail.title}}
+      <ion-item ng-repeat="map in closestMaps" href="#/app/nearby/map/{{map.distance}}">
+        {{map.properties.name}}
       </ion-item>
     </ion-list>
   </ion-content>
