--- a/www/templates/explore.html
+++ b/www/templates/explore.html
@@ -1,4 +1,4 @@
-<ion-view view-title='Explore'>
+<ion-view view-title='Explore' >
   <ion-nav-buttons side="right">
     <div>
       <button class="button button-icon ion-search" ng-click="showFilterBar()">
@@ -20,16 +20,16 @@
         Medium </ti-segmented-control-button>
       <ti-segmented-control-button class="button-dark"      id="segmentButton"  title="'Hard'">
         Hard   </ti-segmented-control-button>
-      <ti-segmented-control-button class="button-royal"     id="segmentButton"  title="'All'" selected>
+      <ti-segmented-control-button class="button-assertive" id="segmentButton"  title="'All'" selected>
         All    </ti-segmented-control-button>
     </ti-segmented-control>
 
-    <!-- Card list of trails -->
-    <md-content class="md-padding" layout-xs="column" layout="row">
-      <div flex-xs flex-gt-xs="100" layout="column">
-        <md-card  ng-repeat="map in filteredMapProps" href="#/app/explore/map/{{map.cartodb_id}}"
-                  ng-click="cardClicked(map)">
-
+    <!-- Card View -->
+    <ion-list>
+      <ion-item ng-repeat="map in filteredMapProps" href="#/app/explore/map/{{map.cartodb_id}}"
+                class="item-card" style="border-top: 0; border-bottom: 0">
+        <!-- Card -->
+        <md-card class="map-card">
           <md-card-title class="cardTitle{{map.difficulty}}">
             <md-card-title-text class="exploreCardTitleText">
               <span class="md-headline">{{map.name}}</span>
@@ -41,10 +41,9 @@
             </button>
           </md-card-title>
           <img ng-src="img/trail6.jpg" class="md-card-image" alt="Washed Out" style="height: 150px" />
-
         </md-card>
-      </div>
-    </md-content>
+      </ion-item>
+    </ion-list>
 
   </ion-content>
 </ion-view>
