--- a/www/templates/explore.html
+++ b/www/templates/explore.html
@@ -22,7 +22,7 @@
     </div>
 
     <ion-list>
-      <ion-item ng-repeat="map in filteredMapProps" href="#/app/explore/map/{{map.cartodb_id}}">
+      <ion-item ng-repeat="map in filteredMapProps" href="#/app/details/{{map.cartodb_id}}">
         {{map.name}}
       </ion-item>
     </ion-list>
