--- a/www/css/style.css
+++ b/www/css/style.css
@@ -55,3 +55,10 @@
   background: black;
   margin: 0 auto 0 auto;
 }
+
+.lightbg {
+  background-color: #ffffff;
+}
+.darkbg {
+  background-color: #f5f5f0;
+}
