--- a/www/templates/details.html
+++ b/www/templates/details.html
@@ -35,9 +35,6 @@
 			</ion-list>
 		</div>
 		
-		<div id="toggle" style="position: absolute; top: 400px; background-color: rgb(245,245,240);" ng-click="changeBase(1)">
-			ClickMe
-		</div>
 		<div id="cartodbMap" style="
 			height: 256px;
 			width: 100%;
@@ -45,5 +42,7 @@
 			top: 400px;
 		">
 		</div>
+		
+		<img src="img/globe.png" style="position: absolute; top: 400px; background-color: rgba(245,245,240,0.5); padding: 8px" width="40px" height="40px" ng-click="changebase()"></img>
   </ion-content>
 </ion-view>
