--- a/www/templates/favourites.html
+++ b/www/templates/favourites.html
@@ -9,7 +9,7 @@
 				
 				<div style = "display: table-cell; width: 100%; text-align: center; vertical-align: middle">
 						<h3>{{favourite.name}}</h3>
-						<p>{{favourite.location}}</p>
+						<p>{{favourite.name}}</p>
 				</div>
         
       </ion-item>
