--- a/www/templates/history.html
+++ b/www/templates/history.html
@@ -3,8 +3,8 @@
 	
 	<ion-list show-delete="true">
 	
-	<ion-item ng-repeat = "location in history" >
-		{{location}}
+	<ion-item ng-repeat = "location in history" ng-href="#/app/details/{{location.id}}">
+		{{location.name}}
 		<ion-delete-button class="ion-minus-circled item-right" ng-click="history.splice($index, 1)">
 		</ion-delete-button>
 	</ion-item>
