Now displaying location properties

--- a/www/templates/explore.html
+++ b/www/templates/explore.html
@@ -35,7 +35,7 @@
         <md-card class="map-card">
           <md-card-title class="cardTitle{{map.difficulty}}">
             <md-card-title-text class="exploreCardTitleText">
-              <span class="md-headline">{{map.name}}</span>
+              <span class="md-headline">{{map.name}}, {{map.location}}</span>
             </md-card-title-text>
             <!-- Favourite Button -->
             <button ion-stop-event="click" class="favourite-button" style="color: {{map.favButtonColor}}"
