--- a/www/templates/favourites.html
+++ b/www/templates/favourites.html
@@ -9,7 +9,7 @@
 				<md-card class="map-card">
 					<md-card-title class="cardTitle{{map.difficulty}}">
 						<md-card-title-text class="exploreCardTitleText">
-							<span class="md-headline">{{map.name}}</span>
+							<span class="md-headline">{{map.name}}, {{map.location}}</span>
 						</md-card-title-text>
 					</md-card-title>
 					<img ng-src="{{map.img}}" class="md-card-image" alt="Washed Out" style="height: 150px; position: relative" />
