working on blackscreen glitch

--- a/www/templates/history.html
+++ b/www/templates/history.html
@@ -1,4 +1,10 @@
 <ion-view view-title="History">
+	<ion-nav-buttons side="secondary">
+      <button class="button" ng-click="clear()">
+        Clear All
+      </button>
+  </ion-nav-buttons>
+	
   <ion-content>
 	
 	<ion-list show-delete="true">
