--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -3,6 +3,6 @@
     <button ng-click="locate();" class="button button-icon icon ion-pinpoint"></button>
   </ion-nav-buttons>
   <ion-content>
-    <div id="cartodbMap"></div>
+    <div id="cartodbMap" data-tap-disabled="true"></div>
   </ion-content>
 </ion-view>
