Changed theme of settings page to match GET-36. Modified description page map code.

--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -7,7 +7,7 @@
 
   <ion-content>
 	<div style = 
-		"background-color: #90C3D4; 
+		"background-color: #CB202D; 
 		display: flex;
 		align-items: center;
 		justify-content: center;		
