Override details page back button.

--- a/www/templates/details.html
+++ b/www/templates/details.html
@@ -1,4 +1,11 @@
 <ion-view view-title="{{title}}">
+
+	<ion-nav-bar ng-controller="DetailCtrl">
+		<ion-nav-back-button ng-click="myGoBack()">
+			<i class="ion-arrow-left-c"></i> Back
+		</ion-nav-back-button>
+	</ion-nav-bar>
+
   <ion-content>
     <div id="titleimg" style= "
 			width: 100%;
