--- a/www/templates/start.html
+++ b/www/templates/start.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Get Lost">
   <ion-content class="mainbg">
     <div>
-      <button class="button button-full button-dark button-large start-button" ng-click="app/start/startApp()">
+      <button class="button button-full button-dark button-large start-button" ng-click="startApp()">
         Get Started
       </button>
     </div>
