Removed useless stylings

--- a/www/templates/explore.html
+++ b/www/templates/explore.html
@@ -40,8 +40,8 @@
               </md-card-title-text>
             </a>
             <!-- Favourite Button -->
-            <button ion-stop-event="click" class="favourite-button" style="color: {{map.favButtonColor}}"
-                    ng-click="favButtonClick(map)">
+            <button class="favourite-button" style="color: {{map.favButtonColor}}"
+                    on-tap="favButtonClick(map)">
               <div class="ion-star"></div>
             </button>
           </md-card-title>
