--- a/www/templates/favourites.html
+++ b/www/templates/favourites.html
@@ -1,9 +1,12 @@
 <ion-view view-title='<i class="icon icon ion-star"></i> Favourites'>
 
   <ion-content>
+
+		<ion-refresher on-refresh="refresh()"></ion-refresher>
+
     <ion-list>
       <ion-item ng-repeat="map in favourites" href="#/app/favourites/{{map.cartodb_id}}"
-								class="item-card" style="border-top: 0; border-bottom: 0" ng-href="#/app/explore/map/{{map.cartodb_id}}">
+								class="item-card" style="border-top: 0; border-bottom: 0" ng-href="#/app/details/{{map.cartodb_id}}">
 
 				<!-- Card -->
 				<md-card class="map-card">
