i think gallery should be all set up now

--- a/www/templates/details.html
+++ b/www/templates/details.html
@@ -19,7 +19,7 @@
 			background-color: rgba(245,245,240,0.5);
 			padding: 1px; vertical-align: text-middle;
 			">
-			<img src="img/camera.png" width="24px" height="24px" style="vertical-align: middle"></img> gallery
+			<img src="img/camera.png" width="24px" height="24px" style="vertical-align: middle" ng-click="$state.go('app.gallery')"></img> gallery
 		</div>
 		
 		<div id="listcontent" style="
