--- a/www/templates/nearby.html
+++ b/www/templates/nearby.html
@@ -1,8 +1,25 @@
-<ion-view view-title="Nearby">
+<ion-view view-title='Nearby'>
+
   <ion-content>
+
+    <ion-refresher on-refresh="relocate()"></ion-refresher>
+
     <ion-list>
-      <ion-item ng-repeat="map in closestMaps" href="#/app/nearby/map/{{map.distance}}">
-        {{map.properties.name}}
+      <ion-item ng-repeat="map in nearby" href="#/app/favourites/{{map.cartodb_id}}"
+                class="item-card" style="border-top: 0; border-bottom: 0" ng-href="#/app/details/{{map.cartodb_id}}">
+
+        <!-- Card -->
+        <md-card class="map-card">
+          <md-card-title class="cardTitle{{map.difficulty}}">
+            <md-card-title-text class="exploreCardTitleText">
+              <span class="md-headline">{{map.name}}, {{map.location}}</span>
+            </md-card-title-text>
+          </md-card-title>
+          <img ng-src="{{map.img}}" class="md-card-image" alt="Washed Out" style="height: 150px; position: relative" />
+          <button class="difficultyIcon{{map.difficulty}}">
+          </button>
+        </md-card>
+
       </ion-item>
     </ion-list>
   </ion-content>
