gallery page change

--- a/www/templates/gallery.html
+++ b/www/templates/gallery.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Gallery">
   <ion-content>
     <ion-scroll>
-      <img ng-repeat="photo in gallery" ng-src="{{photo.src}}" ng-click="showImages($index)">
+      <img ng-repeat="photo in gallery" ng-src="{{photo.src}}">
       </img>
     </ion-scroll>
   </ion-content>
