--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -21,20 +21,14 @@
         <ion-item menu-close href="#/app/explore">
           Explore
         </ion-item>
-        <ion-item menu-close href="#/app/browse">
-          Browse
-        </ion-item>
-				<ion-item menu-close href="#/app/settings">
-          Settings
-        </ion-item>
         <ion-item menu-close href="#/app/favourites">
           <i class="icon icon ion-star"></i> Favourites
         </ion-item>
-        <ion-item menu-close href="#/app/explore">
-          Explore
-        </ion-item>
-        <ion-item menu-close href="#/app/nearby">
+        <!--<ion-item menu-close href="#/app/nearby">
           Nearby
+        </ion-item>-->
+        <ion-item menu-close href="#/app/settings">
+          Settings
         </ion-item>
       </ion-list>
     </ion-content>
