--- a/www/templates/details.html
+++ b/www/templates/details.html
@@ -7,21 +7,21 @@
 	</ion-nav-bar>
 
   <ion-content>
-    <div id="titleimg" style= "
+    <div id="titleimg" ng-click="showImages($index)" style= "
 			width: 100%;
 			height: 200px;
 		">
 			<img src="img/trail8.jpg" width="100%" height="100%">
-		</div> 
-		<div id="gallerybtn" ng-href="" style="
-			position: absolute; 
+		</div>
+		<div id="gallerybtn" href="#/app/gallery" style="
+			position: absolute;
 			right: 5px; top: 10px; text-align: left;
 			background-color: rgba(245,245,240,0.5);
 			padding: 1px; vertical-align: text-middle;
 			">
-			<img src="img/camera.png" width="24px" height="24px" style="vertical-align: middle" ng-click="$state.go('app.gallery')"></img> gallery
+			<img src="img/camera.png" width="24px" height="24px" style="vertical-align: middle" ></img> gallery
 		</div>
-		
+
 		<div id="listcontent" style="
 			position: absolute;
 			top: 150px; left: 32px; right: 32px;
@@ -41,7 +41,7 @@
 				</ion-item>
 			</ion-list>
 		</div>
-		
+
 		<div id="cartodbMap" style="
 			height: 256px;
 			width: 100%;
@@ -49,7 +49,7 @@
 			top: 400px;
 		">
 		</div>
-		
+
 		<img src="img/globe.png" style="position: absolute; top: 400px; background-color: rgba(245,245,240,0.5); padding: 8px" width="40px" height="40px" ng-click="changebase()"></img>
   </ion-content>
 </ion-view>
